5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1706_3033.log
== TEST (2019-04-29 19:10:54) 
-- CODE:
x = float(input("Qual o valor de x: "))]

if (-100 <= x) and (x < 0):
	a = -(1/x)
	print(round(a, 4))
elif (0 < x) and (x <= 100):
	a = (1/x)
	print(round(a, 4))
else :
	print("entrada invalida")
-- ERROR:
File "XXXX", line 1
    x = float(input())]
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:11:03) 
-- CODE:
x = float(input("Qual o valor de x: "))

if (-100 <= x) and (x < 0):
	a = -(1/x)
	print(round(a, 4))
elif (0 < x) and (x <= 100):
	a = (1/x)
	print(round(a, 4))
else :
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:11:16) 
-- CODE:
x = float(input("Qual o valor de x: "))

if (-100 <= x) and (x < 0):
	a = -(1/x)
	print(round(a, 4))
elif (0 < x) and (x <= 100):
	a = (1/x)
	print(round(a, 4))
else :
	print("entrada invalida")
-- EXECUTION TIME:
0.186314
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
